fix search box vertical alignment

--- a/pelican-bootstrap3/static/tipuesearch/tipuesearch.css
+++ b/pelican-bootstrap3/static/tipuesearch/tipuesearch.css
@@ -19,7 +19,7 @@ http://www.tipue.com/search
 	-webkit-appearance: none;
      box-shadow: none;
 	outline: 0;
-	margin: 0;
+	margin: 7px 0;
 	background: #fff url('img/search.png') no-repeat 15px 15px;
 }
 
